--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 #portfolio {
-  background-color: blue;
+
+  background-image: linear-gradient(to right, purple, blue , green);
 }
+
 .article-image {
   height: 150px;
   width: 115px;
