--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
   width: 115px;
 }
 .navbar {
-  background-color: grey
+  background-color: grey;
+  border-bottom: 1px solid black;
 }
 .portfolio-text{
   color:black;
@@ -17,4 +18,16 @@
 
 .portfolio-text:hover {
   color: rgb(7, 16, 250);
+}
+
+#about_me {
+ position: relative;
+ text-align: center;
+ color: white;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
